fix footer style, add xs break for center, adjust sizing to vw, remove opacity on cards for better mobile visibility, fix bug for game reset prompt

--- a/memory.css
+++ b/memory.css
@@ -41,14 +41,14 @@ body{
 .game-card{
     width: 10vw;
     height: 15vh;
-    border: 4px solid black;
-    border-radius: 8px;
+    border: 2px solid black;
+    border-radius: 4px;
     background-size: 100%;
     box-shadow: 5px, 10px, 5px, #dc3545;
 }
 
 .game-card:hover{
-    opacity: 35%;
+    background: rgb(235, 226, 226);
     cursor: pointer;
 }
 
@@ -70,3 +70,16 @@ body{
 #thanks{
     border-radius: 20px;
 }
+#footer span{
+    font-size: 1.5vw;
+}
+
+
+@media (max-width: 576px) {
+    #copy, #social{
+        text-align: center;
+        align-content: center;
+        align-items: center;
+    }
+
+ }
